# sfml-training

./: .gitignore  CMakeLists.txt
src/: Game.cpp  Game.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  main.cpp
src/Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
